<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signinback"
    tools:context=".login.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtLoginsub"
        android:layout_marginLeft="@dimen/topmargin"
        android:layout_marginRight="@dimen/topmargin"
        android:layout_marginBottom="@dimen/topmargin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtLoginsub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear"
        android:layout_marginLeft="@dimen/topmargin"
        android:layout_marginRight="@dimen/topmargin"
        android:text="@string/loginSub"
        android:textColor="@color/white"
        android:textSize="@dimen/subheading"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/topmargin"
        android:background="@drawable/signback"
        android:orientation="vertical"
        android:padding="@dimen/topmargin">

        <EditText
            android:id="@+id/edtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editback"
            android:drawableRight="@drawable/editdrawable"
            android:hint="Enter your personal number"
            android:padding="@dimen/padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/editback"
            android:drawableRight="@drawable/ic_lock"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/buttonback"
            android:text="Sign in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topmargin"
            android:shadowColor="@color/black"
            android:text="@string/terms"
            android:textSize="@dimen/subtext" />


        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/topmargin"
            android:shadowColor="@color/black"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/subtext"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>